added header, and logo

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
   <body>
     <div class="container">
       <div id="sidebar">
-        <h1>Electronic War Archive</h1>
+        <div class="header">
+          <img src="assets/images/logo.png" alt="logo" />
+          <h1>الأرشيف الإلكتروني الحرب الإلكترونية</h1>
+        </div>
         <div id="directory-structure"></div>
       </div>
       <div id="pdf-viewer">
         <iframe id="pdf-frame" src="" frameborder="0"></iframe>
         <div class="pdf-controls">
-          <span class="control-pdf-btn edit">Edit</span>
+          <span class="control-pdf-btn edit">تعديل</span>
           <!-- <span class="control-pdf-btn delete">Delete</span> -->
         </div>
       </div>
